--- a/style.css
+++ b/style.css
@@ -218,3 +218,153 @@ nav .active{
 .action-btn:hover{
     background-color: #00d11f;
 }
+
+/* join-us */
+#join-us .content-wrap{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.join-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+.input-1{
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    color: rgb(255,255,255);
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding:0px 30px;
+    height: 40px;
+    width: 600px;
+    animation: bottomIn 1s ease-in-out forwards;
+    opacity: 0;
+}
+.i1{
+    animation-delay: 0.4s;
+}
+.i2{
+    animation-delay: 0.45s;
+}
+.i3{
+    animation-delay: 0.5s;
+}
+.i4{
+    animation-delay: 0.55s;
+}
+.input-1::placeholder{
+    color: white;
+}
+#join-us p{
+    font-size: 18px;
+    letter-spacing: 1px;
+    animation: bottomIn 1s ease-in-out forwards;
+    opacity: 0;
+    animation-delay: 0.6s;
+}
+.checkbox-wrap{
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    animation: bottomIn 1s ease-in-out forwards;
+    opacity: 0;
+    animation-delay: 0.65s;
+}
+.join-btn{
+    font-size: 18px;
+    font-weight: 600px;
+    color: white;
+    background-color: #00ff26;
+    letter-spacing: 1px;
+    height: 45px;
+    width: 300px;
+    border-radius: 50px;
+    text-transform: capitalize;
+    color: black;
+    cursor: pointer;
+    transition: 0.3s;
+    animation: bottomIn 1s ease-in-out forwards;
+    opacity: 0;
+    animation-delay: 0.7s;
+}
+.join-btn:hover{
+    background-color: #00d11f;
+}
+
+/* footer */
+.footer-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 50px;
+    column-gap: 50px;
+}
+.footer-grid div{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+#footer h3{
+    font-size: 1.5rem;
+    font-weight: 600px;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    animation: bottomIn 1s ease-in-out forwards;
+    opacity: 0;
+    animation-delay: 0.2s;
+}
+.footer-item{
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    color: rgb(204, 204, 204);
+    cursor: pointer;
+    transition: 0.3s;
+    animation: bottomIn 1s ease-in-out forwards;
+    opacity: 0;
+}
+.footer-item:hover{
+    color: rgb(241, 241, 241);
+    text-shadow: 0 0 10px white;
+}
+#footer .section-box{
+    height: auto;
+}
+.copyrights{
+    font-size: 14px;
+    letter-spacing: 1px;
+    font-weight: 400px;
+    color: rgb(203, 203, 203);
+    text-align: center;
+    padding: 15px;
+}
+#footer{
+    align-items: start;
+    height: auto;
+    padding: 65px 0;
+}
+.f1{
+    animation-delay: 0.25s;
+}
+.f2{
+    animation-delay: 0.3s;
+}
+.f3{
+    animation-delay: 0.35s;
+}
+.f4{
+    animation-delay: 0.4s;
+}
+.f5{
+    animation-delay: 0.45s;
+}
+.f6{
+    animation-delay: 0.5s;
+}
